# bluepad32

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml
.github/: FUNDING.yml
docs/: FAQ.md  architecture.md  (+29 more)
examples/pico_w/: CMakeLists.txt  README.md  my_platform.c
examples/pico_w/.run/: Remote GDB.run.xml
examples/pico_w/src/: btstack_config.h  main.c  my_platform.c  sdkconfig.h
examples/posix/: CMakeLists.txt  README.md
examples/posix/src/: my_platform.c  sdkconfig.h
src/components/bluepad32/: CMakeLists.txt  Kconfig  Kconfig.projbuild  component.mk  idf_component.yml  uni_balance_board.c  uni_ble.c  uni_bluetooth.c  uni_bt.c  uni_bt_allowlist.c  uni_bt_bredr.c  uni_bt_conn.c  uni_bt_le.c  uni_bt_sdp.c  uni_bt_setup.c  uni_circular_buffer.c  uni_console.c  uni_controller.c  uni_esp32.c  uni_gamepad.c  uni_gpio.c  uni_hci_cmd.c  uni_hid_device.c  uni_hid_parser.c  uni_hid_parser_8bitdo.c  uni_hid_parser_android.c  uni_hid_parser_atari.c  uni_hid_parser_ds3.c  uni_hid_parser_ds4.c  uni_hid_parser_ds5.c  uni_hid_parser_generic.c  uni_hid_parser_icade.c  uni_hid_parser_keyboard.c  uni_hid_parser_mouse.c  uni_hid_parser_nimbus.c  uni_hid_parser_ouya.c  uni_hid_parser_psmove.c  uni_hid_parser_smarttvremote.c  uni_hid_parser_steam.c  uni_hid_parser_switch.c  (+30 more)
src/components/bluepad32/arch/: uni_console_esp32.c  uni_console_posix.c  uni_log_esp32.c  uni_log_linux.c  uni_log_pico.c  uni_log_posix.c  uni_property_esp32.c  uni_property_linux.c  uni_property_pico.c  uni_property_posix.c  uni_system_esp32.c  uni_system_linux.c  uni_system_pico.c  uni_system_posix.c  uni_uart_esp32.c  uni_uart_pico.c
src/components/bluepad32/bt/: uni_bt.c  uni_bt_allowlist.c  uni_bt_bredr.c  uni_bt_conn.c  uni_bt_hci_cmd.c  uni_bt_le.c  uni_bt_sdp.c  uni_bt_service.c  uni_bt_service.gatt  uni_bt_setup.c
src/components/bluepad32/controller/: uni_balance_board.c  uni_controller.c  uni_controller_type.c  uni_gamepad.c  uni_keyboard.c  uni_mouse.c
src/components/bluepad32/include/: hid_usage.h  uni.h  uni_balance_board.h  uni_ble.h  uni_bluetooth.h  uni_bt.h  uni_bt_allowlist.h  uni_bt_bredr.h  uni_bt_conn.h  uni_bt_defines.h  uni_bt_le.h  uni_bt_sdp.h  uni_bt_setup.h  uni_btstack_version_compat.h  uni_circular_buffer.h  uni_common.h  uni_config.h  uni_console.h  uni_controller.h  uni_debug.h  uni_error.h  uni_esp32.h  uni_gamepad.h  uni_gpio.h  uni_hci_cmd.h  uni_hid_device.h  uni_hid_device_vendors.h  uni_hid_parser.h  uni_hid_parser_8bitdo.h  uni_hid_parser_android.h  uni_hid_parser_atari.h  uni_hid_parser_ds3.h  uni_hid_parser_ds4.h  uni_hid_parser_ds5.h  uni_hid_parser_generic.h  uni_hid_parser_icade.h  uni_hid_parser_keyboard.h  uni_hid_parser_mouse.h  uni_hid_parser_nimbus.h  uni_hid_parser_ouya.h  (+30 more)
src/components/bluepad32/include/bt/: uni_bt.h  uni_bt_allowlist.h  uni_bt_bredr.h  uni_bt_conn.h  uni_bt_defines.h  uni_bt_hci_cmd.h  uni_bt_le.h  uni_bt_sdp.h  uni_bt_service.gatt.h  uni_bt_service.h  uni_bt_setup.h
src/components/bluepad32/include/controller/: uni_balance_board.h  uni_controller.h  uni_controller_list.h  uni_controller_type.h  uni_gamepad.h  uni_keyboard.h  uni_mouse.h
src/components/bluepad32/include/parser/: uni_hid_parser.h  uni_hid_parser_8bitdo.h  uni_hid_parser_android.h  uni_hid_parser_atari.h  uni_hid_parser_ds3.h  uni_hid_parser_ds4.h  uni_hid_parser_ds5.h  uni_hid_parser_generic.h  uni_hid_parser_icade.h  uni_hid_parser_keyboard.h  uni_hid_parser_mouse.h  uni_hid_parser_nimbus.h  uni_hid_parser_ouya.h  uni_hid_parser_psmove.h  uni_hid_parser_smarttvremote.h  uni_hid_parser_stadia.h  uni_hid_parser_steam.h  uni_hid_parser_switch.h  uni_hid_parser_wii.h  uni_hid_parser_xboxone.h
src/components/bluepad32/parser/: uni_hid_parser.c  uni_hid_parser_8bitdo.c  uni_hid_parser_android.c  uni_hid_parser_atari.c  uni_hid_parser_ds3.c  uni_hid_parser_ds4.c  uni_hid_parser_ds5.c  uni_hid_parser_generic.c  uni_hid_parser_icade.c  uni_hid_parser_keyboard.c  uni_hid_parser_mouse.c  uni_hid_parser_nimbus.c  uni_hid_parser_ouya.c  uni_hid_parser_psmove.c  uni_hid_parser_smarttvremote.c  uni_hid_parser_stadia.c  uni_hid_parser_steam.c  uni_hid_parser_switch.c  uni_hid_parser_wii.c  uni_hid_parser_xboxone.c
src/components/bluepad32/platform/: uni_platform.c  uni_platform_arduino.c  uni_platform_arduino_bootstrap.cpp  uni_platform_mightymiggy.c  uni_platform_nina.c  uni_platform_unijoysticle.c  uni_platform_unijoysticle_2.c  uni_platform_unijoysticle_2plus.c  uni_platform_unijoysticle_800xl.c  uni_platform_unijoysticle_a500.c  uni_platform_unijoysticle_c64.c  uni_platform_unijoysticle_msx.c  uni_platform_unijoysticle_singleport.c
src/components/bluepad32_arduino/: ArduinoBluepad32.cpp  ArduinoBluepad32.h  ArduinoConsole.cpp  ArduinoController.cpp  ArduinoGamepad.cpp  ArduinoGamepad.h  Bluepad32.h  CMakeLists.txt  README.md  component.mk
src/components/bluepad32_arduino/include/: ArduinoBluepad32.h  ArduinoConsole.h  ArduinoController.h  ArduinoControllerData.h  ArduinoControllerProperties.h  ArduinoGamepad.h  ArduinoGamepadProperties.h  ArduinoKeyboardConstants.h  Bluepad32.h
src/main/: ArduinoBluepad32.cpp  ArduinoBluepad32.h  ArduinoGamepad.cpp  ArduinoGamepad.h  CMakeLists.txt  Kconfig  arduino_bluepad32.cpp  arduino_bluepad32.h  arduino_gamepad.cpp  arduino_gamepad.h  arduino_main.cpp  component.mk  main.c  my_platform.c  sketch.cpp  uni_bluetooth.c  uni_bluetooth.h  uni_circular_buffer.h  uni_config.h  uni_debug.h  uni_gamepad.c  uni_gamepad.h  uni_hid_device.c  uni_hid_device.h  uni_hid_device_vendors.h  uni_hid_parser.c  uni_hid_parser.h  uni_hid_parser_8bitdo.c  uni_hid_parser_8bitdo.h  uni_hid_parser_android.c  uni_hid_parser_android.h  uni_hid_parser_ds3.c  uni_hid_parser_ds3.h  uni_hid_parser_ds4.c  uni_hid_parser_ds4.h  uni_hid_parser_ds5.c  uni_hid_parser_ds5.h  uni_hid_parser_generic.c  uni_hid_parser_generic.h  uni_hid_parser_icade.c  (+43 more)
tools/pico/: CMakeLists.txt  btstack_config.h  build.sh  main.c  my_platform.c  sdkconfig.h
(+115 files in other folders)
